--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -507,11 +507,7 @@ a:hover {
   margin: 0 auto;
 }
 
-.slide-track {
-  display: flex;
-  animation: scroll 30s linear infinite;
-  width: calc(250px * 12); /* Adjust based on number of slides */
-}
+
 
 .slide {
   width: 250px;
@@ -535,11 +531,6 @@ a:hover {
   margin: 0 auto;
 }
 
-.slide-track {
-  display: flex;
-  animation: slide-back-forth 15s ease-in-out infinite;
-  width: calc(250px * 6); /* Adjust based on number of slides */
-}
 
 .slide {
   width: 250px;
@@ -550,11 +541,14 @@ a:hover {
 
 .slide img {
   width: 100%;
-  height: 100%;
   object-fit: cover;
-  border-radius: 10px;
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
   transition: all 0.3s ease;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  box-shadow: rgba(240, 46, 170, 0.4) 5px 5px, rgba(240, 46, 170, 0.3) 10px 10px, rgba(240, 46, 170, 0.2) 15px 15px, rgba(240, 46, 170, 0.1) 20px 20px, rgba(240, 46, 170, 0.05) 25px 25px;
 }
 
 .slide:hover img {
@@ -1113,7 +1107,8 @@ a:hover {
 .slide-track {
   display: flex;
   width: calc(300px * 6);
-  animation: scroll 20s linear infinite;
+  animation: scroll 80s linear infinite;
+  -webkit-animation: scroll 80s linear infinite;
 }
 
 
@@ -1442,7 +1437,7 @@ a:hover {
 }
 
 .add-event-form {
-  background-color: var(--bg-white);
+  background-color:#6c6ab7;
   border-radius: var(--border-radius-lg);
   padding: var(--spacing-lg);
   box-shadow: var(--shadow-md);
